[gd_scene load_steps=6 format=3 uid="uid://bfkvw3o2633g6"]

[ext_resource type="Script" path="res://Scenes/Bullet/bullet.gd" id="1_peglh"]
[ext_resource type="Texture2D" uid="uid://cfgwoxrvm8ma2" path="res://Scenes/Bullet/bullet.png" id="2_f8mot"]
[ext_resource type="Script" path="res://Scenes/Bullet/Trail.gd" id="3_dngta"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8cv81"]
size = Vector2(5.5, 2)

[sub_resource type="Curve" id="Curve_s3m6o"]
_data = [Vector2(0.5, 0), 0.0, 0.0, 0, 0, Vector2(0.752632, 0.197802), -0.23199, 0.0, 0, 0]
point_count = 2

[node name="Bullet" type="Area2D"]
z_index = 1
position = Vector2(9, 0)
collision_layer = 0
collision_mask = 7
script = ExtResource("1_peglh")
speed = 200

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-9, -2.98023e-08)
scale = Vector2(0.133333, 0.214286)
texture = ExtResource("2_f8mot")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, 0)
shape = SubResource("RectangleShape2D_8cv81")

[node name="DisplayTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Trail" type="Line2D" parent="."]
width_curve = SubResource("Curve_s3m6o")
default_color = Color(1, 0.870588, 0, 1)
script = ExtResource("3_dngta")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
